--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/Nuevo.cshtml
@@ -179,11 +179,6 @@
     }
 }
 <script type="text/javascript">
-
-    $(function () {
-        get_list_termino_pago
-    });
-
     $("#IdTerminoPago").change(function () {
         get_info_termino_pago();
     });
@@ -212,7 +207,7 @@
         });
     };
 
-    function get_list_termino_pago() {
+    function set_termino_pago_x_proveedor() {
         if (IdProveedor.GetValue() > 0) {
             var datos = {
                 IdEmpresa: $("#IdEmpresa").val(),
@@ -221,17 +216,14 @@
             $.ajax({
                 type: 'POST',
                 data: JSON.stringify(datos),
-                url: '@Url.Action("get_list_termino_pago", "OrdenCompraLocal", new { Area = "Compras" })',
+                url: '@Url.Action("get_info_termino_pago_x_proveedor", "OrdenCompraLocal", new { Area = "Compras" })',
                 async: false,
                 bDeferRender: true,
                 bProcessing: true,
                 dataType: 'json',
                 contentType: 'application/json; charset=utf-8',
                 success: function (data) {
-                    $.each(data, function (i, row) {
-                        $("#IdTerminoPago").append("<option value=" + row.IdTerminoPago + ">" + row.Descripcion + "</option>");
-                    });
-
+                    $("#IdTerminoPago").val(data.IdTerminoPago);
                     get_info_termino_pago();
                 },
                 error: function (error) {
